# env-vars-config

./: Cargo.toml  README.md  shell.nix
.github/workflows/: ci.yml  main.yml  publish.yml
src/: lib.rs  main.rs
