[package]
name = "env-vars-config"
version = "0.4.1"
authors = ["NikSne <commits@niksne.ru>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/NikSneMC/env-vars-config"
documentation = "https://docs.rs/env-vars-config"
description = """
A simple lib for configuring your applications via environment variables
"""
categories = ["config"]
keywords = ["env", "config", "environment"]
exclude = [".github", ".envrc", "flake.*", "shell.nix"]
rust-version = "1.80.0"
edition = "2021"

[dependencies]
log = "0.4"

